<resources>
    <string name="app_name">FaceBook</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password1">Forgot password?</string>

    <string name="register_for_account">Register for account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>

    <string name="login_underlined"><u>Login</u></string>
    <string name="forgotpassword_underlined"><u>Forgot password</u></string>

    <string-array name="type_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>
</resources>